@@ -131,4 +131,6 @@ class Sys::IO {
   native static method fstat : int ($fd : int, $stat : Sys::IO::Stat);
 
   native static method freopen : Sys::IO::FileStream ($path : string, $mode : string, $stream : Sys::IO::FileStream);
+
+  native static method setvbuf : int ($stream : Sys::IO::FileStream, $buf : mutable string, $mode : int, $size : int);
 }
